# sandbox

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml
cli/: __init__.py  main.py
cli/commands/: config_cmd.py  firewall.py  inspect.py  lifecycle.py  logs.py  mcp.py  mount.py  proxy.py  secrets.py  tools.py
cli/data/: .env.dist
cli/lib/: __init__.py  config.py  docker.py  firewall.py  logging.py  mcp.py  mounts.py  paths.py  platform.py  project.py  scaffold.py  secrets.py
config/mcp/: filesystem.yaml
config/network/: dlp.yaml  inspection.yaml
config/tools/: claude-code.yaml  open-interpreter.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  mcp-log-wrapper.py  session-wrapper.sh
docker/firewall/: Dockerfile_firewall  entrypoint-firewall.sh  firewall-apply.sh  firewall-init.sh  firewall-log.sh
docs/: architecture.md  deployment-guide.md  event-schema.md  mcp-guide.md  use-cases.md  user-guide.md
test/: conftest.py
test/e2e/: conftest.py  test_container.py  test_firewall.py  test_logging.py  test_mcp_e2e.py  test_mounts.py  test_project_scoping.py  test_secrets_config.py
test/integration/: test_config_portability.py  test_first_run.py  test_log_export.py  test_mcp.py  test_multi_project.py  test_offline.py  test_resource_limits.py  test_scaffolding.py  test_secrets.py
test/unit/: test_cli.py  test_config.py  test_config_commands.py  test_config_profiles.py  test_event_schema.py  test_firewall.py  test_firewall_profiles.py  test_logging_sinks.py  test_mcp.py  test_mcp_permissions.py  test_mount_commands.py  test_paths.py  (+4 more)
(+17 files in other folders)
